--- a/_posts/2012-01-13-game-make-you-younger-10-year.textile
+++ b/_posts/2012-01-13-game-make-you-younger-10-year.textile
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Jane McGonigal:能让你多活10年的游戏
+title: 延长你10年寿命的游戏 By Jane McGonigal
 category: movie
 ---
 
 p(date). 2012-01-13
 
-<embed src="http://player.opengg.me/player.php/sid/XNDYwMDA1ODY4/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>0
+<embed src="http://player.opengg.me/player.php/sid/XNDcxNDU0NTM2/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
 
 youtube观看地址： <a target="_blank" href="http://www.youtube.com/watch?v=lfBpsV1Hwqs" target="_blank">这里</a>
 
