--- a/_posts/2012-12-03-heroku-snova-fuck-the-greatwall-perfect.textile
+++ b/_posts/2012-12-03-heroku-snova-fuck-the-greatwall-perfect.textile
@@ -9,15 +9,15 @@ p(date). 2012-12-03
 goagent是优秀的翻墙工具，但由于斯巴达的影响，造成谷歌搜索经常无缘故的被重定向，@yinqiwen 开发的snova，部署在heroku上运行非常稳定，
 翻墙速度很给力，最重要的是完美支持https。
 
-h3 1. 首先创建一个heroku帐号
+<h3> 1. 首先创建一个heroku帐号</h3>
    在<a target="_blank" href="http://twitter.com/gxxx" target="_blank">这个页面</a>输入你的有邮箱地址
-h3 2. 安装 HEROKU TOOLBELT
+<h3> 2. 安装 HEROKU TOOLBELT </h3>
 
 注册成功之后，你会收到一封邮件，点击里面的那个长长的链接，然后在打开的<a href="https://toolbelt.heroku.com/windows">页面下载</a>页面下载 Heroku Toolbelt 软件并安装。
-h3 3. 下载 SNOVA-C4-HEROKU-SERVER-XXX.ZIP
+<h3> 3. 下载 SNOVA-C4-HEROKU-SERVER-XXX.ZIP</h3>
  <img src="/image/snovahome.jpg" />
 在 https://code.google.com/p/snova/downloads/list 下载 “snova-c4-server-0.19.0.war” 文件并放到D盘根目录下，可改名为190.war
-h3 4. 部署 SNOVA C4 服务端到 HEROKU
+<h3> 4. 部署 SNOVA C4 服务端到 HEROKU</h3>
 
 
 	* 打开命令行难看的黑色界面，输入 d:  回车
@@ -46,20 +46,21 @@ h3 5. 下载、配置 SNOVA C4 客户端
 
 解压缩，修改 gsnova.conf 的以下部分
 
-
+{% highlight python %}
 [GAE]
 Enable=0 
 
 [C4]
 Enable=1
-WorkerNode[0]=abc.herokuapp.com
-WorkerNode[1]=xyz.herokuapp.com （如果你创建了第二个app，名叫def。 可以此格式加多个。）
+WorkerNode [0]=abc.herokuapp.com
+WorkerNode [1]=xyz.herokuapp.com （如果你创建了第二个app，名叫def。 可以此格式加多个。）
 
 [SPAC]
 Enable=0
 Default=Auto
+{% endhighlight %}
 
-保存，搞定！
+保存，搞定
 
 6.设置浏览器 实现智能代理
 
